<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deviceshifu_driver2</name>
  <version>0.0.1</version>
  <description>DeviceShifu ROS2 Driver</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-flask</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 